2014-08-19 : Turnitin Paper Id now shown next to submission to show that paper has been submitted in PP.
2014-08-19 : Cron in PP changed to check for scores when ORcapable is 1.
2014-08-19 : Course Migration query fixed when creating class. 
2014-08-19 : Error reporting added for files that are too large, small submissions and any other submission errors.
2014-08-19 : Error reporting added to cron.
2014-08-19 : Error reporting and success statement added at submission stage.
2014-08-19 : Non acceptance of EULA now indicated to tutor in inbox.
2014-08-19 : Error indicators and rollover messages now displayed in inbox.
2014-08-19 : Error messages saved and displayed in settings area.
2014-08-19 : EULA moved to submission declaration and form hidden.
2014-08-19 : Long assignment titles are now truncated.
2014-08-19 : Inbox date editing fixed for Windows.
2014-08-19 : Link to a file in Summary now renders correctly. 
2014-06-21 : Grades now removed from Gradebook when submission is deleted.
2014-06-21 : PP cron now ignores files with no OR score when cron attempts to refresh scores.
2014-06-21 : SDK setting added to use Moodle SSL certificate if it is present.
2014-06-21 : WSDL files used by SDK are now stored locally.
2014-06-21 : Database dump added to PP settings page.
2014-06-21 : Enrol admin as an instructor when migrating incase they are not on the account.
2014-06-21 : Feedback files no longer sent to Turnitin in PP
2014-06-21 : Bug fixed with course migration where accept anything setting was not being passed to recreated assignment
2014-06-21 : Bug fixed where Grademark null grades were overwriting grades previously set in Moodle in the Plagiarism plugin.
2014-06-21 : Gradebook now updates when post date is changed on the inbox screen.
2014-06-21 : Error message now shown if ajax request to get submissions times out
2014-06-21 : Bug fixed where instructors can not access Turnitin Messages Inbox
2014-06-21 : Forum posts are now submitted to Turnitin when posted