@@ -16,6 +16,7 @@ Release:    v2014012406
 - Non acceptance of EULA now indicated to tutor in inbox.
 - Error indicators and rollover messages now displayed in inbox.
 - Error messages saved and displayed in settings area.
+- Remove Grademark settings if GradeMark is disabled.
 - EULA moved to submission declaration and submission form hidden.
 - Turnitin Paper Id now shown next to submission to show that paper has been submitted. 
 - Fixes:
@@ -24,6 +25,8 @@ Release:    v2014012406
 	> Inbox part date editing now works on Windows servers.
 	> Cron in PP changed to check for scores when ORcapable is 1.
 	> Course Migration query fixed when creating class.
+	> File errors page no longer errors if file has been deleted.
+	> Course migration bug no longer tries to populate PP array in migration if PP not installed
 
 ####################################################################################
 
